--- a/paginas/Calendario/Calendario.html
+++ b/paginas/Calendario/Calendario.html
@@ -312,8 +312,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="../Calendario/Calendario.html" class="nav-link py-3" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notas" style="color: white;">
-                                    <i class="bi bi-stickies fs-3"></i>
+                                <a href="../Profissionais/Profissionais.html" class="nav-link py-3" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Notas" style="color: white;">
+                                    <i class="bi bi-person-workspace fs-3"></i>
                                 </a>
                             </li>
                             <li>
