--- a/paginas/Calendario/Calendario.html
+++ b/paginas/Calendario/Calendario.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href='main.css' rel='stylesheet' />
     <script src='main.js'></script>
-    <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="javascript.js" defer></script>
 </head>
 
 <body class="fullHeight">
