--- a/paginas/Configuracoes/index.html
+++ b/paginas/Configuracoes/index.html
@@ -18,7 +18,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi bi-caret-down-square-fill" style="color: white; font-size: 26px;"></i>
                 </button>
-                <a>
+                <a href="../Calendario/Calendario.html">
                     <img src="images/Logo.png" alt="Logo" width="40" height="40" id="logo_position">
                 </a>
                 <div class="collapse navbar-collapse" id="navbarButtonsExample" style="z-index: 9999;">
