--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -304,10 +304,11 @@
                     <div class="col-sm-4">
                         <small>(*) Campos obrigatórios</small>
                     </div>
-                    <div class="form-group col-4" style="margin-top: 10px;">
+                    <div class="form-group col-auto" style="margin-top: 10px;">
                         <div id="form-buttons">
                             <input type="button" class="btn btn-success" id="btnInsert2" value="Inserir">
                             <input type="button" class="btn btn-secondary" id="btnClear2" value="Limpar">
+                            <input type="button" class="btn btn-dark" id="btnDelet2" value="Excluir">
                             <input type="button" class="btn btn-cancel" id="btnCancel2" value="Cancelar">
                         </div>
                     </div>
