--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -340,7 +340,7 @@
                     <table id="grid-events" class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col">Evento</th>
+                                <th scope="col"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" id="rr">Evento</a></th>
                                 <th scope="col">Descrição</th>
                                 <th scope="col">Data</th>
                                 <th scope="col">Horário</th>
