--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -238,7 +238,7 @@
                                 <div class="container-fluid article-size">
                                     <div class="row g-0">
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-1">
-                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control" />
+                                            <img id="imagem" src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control" />
                                         </div>
                                         <div class="col-sm-12 col-md-8 col-lg-9">
                                             <div class="card-body">
@@ -265,7 +265,7 @@
                                         </div>
                                         <div class="card-body model-1">
                                             <div class="floating-left">
-                                                <h6>Camila Bonatti</h6>
+                                                <h6 class="autor">Camila Bonatti</h6>
                                                 <p><small class="text-muted">27/01/2022 às 7:55</small></p>
                                             </div>
 
@@ -304,7 +304,6 @@
             </div>
         </div>
     </main>
-    <script src="scripts/estrelas.js"></script>
     <script src="scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
