nada mais é opcional

--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -277,7 +277,7 @@
                                             <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control" />
 
                                             <div class="floating-left">
-                                                <h6>Camila Bonatti</h6>
+                                                <h6 class="autor">Camila Bonatti</h6>
                                                 <p><small class="text-muted">27/01/2022 às 7:55</small></p>
                                                 <div>
                                                     <div class="rating">
