--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -238,7 +238,7 @@
                                 <div class="container-fluid article-size">
                                     <div class="row g-0">
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-1">
-                                            <img id="imagem" src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control" />
+                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control controle-imagem1" />
                                         </div>
                                         <div class="col-sm-12 col-md-8 col-lg-9">
                                             <div class="card-body">
@@ -274,7 +274,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-2">
-                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control" />
+                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control controle-imagem2" />
 
                                             <div class="floating-left">
                                                 <h6 class="autor">Camila Bonatti</h6>
