--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -230,11 +230,11 @@
                 </div>
                 <div class="form-group row smallPadding">
                     <div class="col-sm-6">
-                        <label for="inputHorario">Horário</label>
+                        <label for="inputHorario">Horário (*)</label>
                         <input type="time" class="form-control" id="inputHorario" placeholder="Informe o horário da tarefa">
                     </div>
                     <div class="col-sm-6">
-                        <label for="inputCategoria">Categoria</label>
+                        <label for="inputCategoria">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria" class="form-control">
                             <option value="">Selecione a Categoria</option>
                             <option value="#bd7f62">Trabalho</option>
@@ -293,11 +293,11 @@
                 </div>
                 <div class="form-group row smallPadding">
                     <div class="col-sm-6">
-                        <label for="inputHorario2">Horário</label>
+                        <label for="inputHorario2">Horário (*)</label>
                         <input type="time" class="form-control" id="inputHorario2" placeholder="Informe o horário da tarefa">
                     </div>
                     <div class="col-sm-6">
-                        <label for="inputCategoria2">Categoria</label>
+                        <label for="inputCategoria2">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria2" class="form-control">
                             <option value="">Selecione a Categoria</option>
                             <option value="#bd7f62">Trabalho</option>
