--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -237,17 +237,19 @@
                         <label for="inputCategoria">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria" class="form-control">
                             <option value="">Selecione a Categoria</option>
-                            <option value="#bd7f62">Trabalho</option>
+                            <option value="#e85a6a">Trabalho</option>
                             <option value="#79b57f">Estudo</option>
                             <option value="#a89e43">Faculdade</option>
-                            <option value="#ad7547">Cursos</option>
+                            <option value="#a33eb5">Curso</option>
                             <option value="#3d303d">Vida Noturna</option>
                             <option value="#6f869e">Descanso</option>
-                            <option value="#2695a3">Dia-a-dia</option>
+                            <option value="#2eadc7">Dia-a-dia</option>
                             <option value="#a876a2">Social</option>
                             <option value="#d66a22">Social-Profissional</option>
                             <option value="#4b88e3">Saude</option>
                             <option value="#d62222">Importante!</option>
+                            <option value="#d9d911">Cuidado!</option>
+                            <option value="#e33b84">Outros</option>
                         </select>
                     </div>
                 </div>
@@ -300,17 +302,19 @@
                         <label for="inputCategoria2">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria2" class="form-control">
                             <option value="">Selecione a Categoria</option>
-                            <option value="#bd7f62">Trabalho</option>
+                            <option value="#e85a6a">Trabalho</option>
                             <option value="#79b57f">Estudo</option>
                             <option value="#a89e43">Faculdade</option>
-                            <option value="#ad7547">Cursos</option>
+                            <option value="#a33eb5">Curso</option>
                             <option value="#3d303d">Vida Noturna</option>
                             <option value="#6f869e">Descanso</option>
-                            <option value="#2695a3">Dia-a-dia</option>
+                            <option value="#2eadc7">Dia-a-dia</option>
                             <option value="#a876a2">Social</option>
                             <option value="#d66a22">Social-Profissional</option>
                             <option value="#4b88e3">Saude</option>
                             <option value="#d62222">Importante!</option>
+                            <option value="#d9d911">Cuidado!</option>
+                            <option value="#e33b84">Outros</option>
                         </select>
                     </div>
                 </div>
