artigos inside update

--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -238,11 +238,11 @@
                                 <div class="container-fluid article-size">
                                     <div class="row g-0">
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-1">
-                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control controle-imagem1" />
+                                            <img src="" alt="" class="img-fluid rounded img_Control controle-imagem" />
                                         </div>
                                         <div class="col-sm-12 col-md-8 col-lg-9">
                                             <div class="card-body">
-                                                <p>Conseguir lidar com as redes sociais e a procrastinação pode ser uma tarefa árdua para os mais “conectados”. Isso porque a impressão que se constrói é que as redes sempre têm algo muito interessante para
+                                                <!-- <p>Conseguir lidar com as redes sociais e a procrastinação pode ser uma tarefa árdua para os mais “conectados”. Isso porque a impressão que se constrói é que as redes sempre têm algo muito interessante para
                                                     apresentar, enquanto que a tarefa obrigatória pode ser vista como algo monótono e tedioso.</p>
                                                 <p>Por isso, neste texto nós trouxemos algumas dicas práticas para você aprender a lidar com essa situação de uma forma mais assertiva. Acompanhe e saiba mais sobre esse assunto importante.</p>
                                                 <h3>Como lidar com a relação entre as redes sociais e a procrastinação?</h3>
@@ -260,13 +260,13 @@
                                                     pegar o celular (que estaria perto) só para dar uma “espiadinha”.</p>
                                                 <h4>3. Acompanhe o tempo que você fica na rede social</h4>
                                                 <p>Os celulares mais modernos já vêm com esse tipo de controle integrado de fábrica. Ou seja, é possível saber exatamente quantas vezes você desbloqueou a tela, quantas notificações recebeu e quanto tempo permaneceu
-                                                    em cada aplicativo.</p>
+                                                    em cada aplicativo.</p> -->
                                             </div>
                                         </div>
                                         <div class="card-body model-1">
                                             <div class="floating-left">
-                                                <h6 class="autor">Camila Bonatti</h6>
-                                                <p><small class="text-muted">27/01/2022 às 7:55</small></p>
+                                                <h6 class="autor"><!-- Camila Bonatti --></h6>
+                                                <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                             </div>
 
                                             <div class="floating-rigth">
@@ -274,11 +274,11 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-12 col-md-4 col-lg-3 model-2">
-                                            <img src="images/article-1.png" alt="Trendy Pants and Shoes" class="img-fluid rounded img_Control controle-imagem2" />
+                                            <img src="" alt="" class="img-fluid rounded img_Control controle-imagem" />
 
                                             <div class="floating-left">
-                                                <h6 class="autor">Camila Bonatti</h6>
-                                                <p><small class="text-muted">27/01/2022 às 7:55</small></p>
+                                                <h6 class="autor"><!-- Camila Bonatti --></h6>
+                                                <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                                 <div>
                                                     <div class="rating">
                                                         <input type="radio" name="rating" value="5" id="5"><label for="5"><img src="images/star0.png" class="img-star"></label>
