first functions for pros

--- a/modulo_frontend/Pages/Profissionais/Profissionais.html
+++ b/modulo_frontend/Pages/Profissionais/Profissionais.html
@@ -234,10 +234,10 @@
                             <div class="card">
                                 <div class="card-header-pills" style="margin: 20px 0px;">
                                     <h1>Porque não uma ajuda profissional e personalizada?</h1>
-                                    <p style="text-align: center;">Segue abaixo uma lista de profissionais que escolhemos especialmente para voce!</p>
+                                    <p style="text-align: center;">Segue abaixo uma lista de profissionais que escolhemos especialmente para você!</p>
                                 </div>
                                 <div class="container-fluid article-size">
-                                    <div class="row g-0">
+                                    <div class="row g-0 cards-box">
 
                                         <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 pro-margin">
                                             <!-- Card-->
@@ -712,7 +712,6 @@
             </div>
         </div>
     </main>
-    <script src="scripts/estrelas.js"></script>
     <script src="scripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
