--- a/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
+++ b/modulo_frontend/Pages/Artigos_inside/Artigos_inside.html
@@ -223,7 +223,7 @@
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser3" style="z-index: 999;">
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Perfil</a></li>
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Personalização</a></li>
-                                <li><a class="dropdown-item" href="../index.html" onclick="logout()">Sair</a></li>
+                                <li><a class="dropdown-item" href="../../index.html" onclick="logout()">Sair</a></li>
                             </ul>
                         </div>
                     </div>
@@ -265,7 +265,9 @@
                                         </div>
                                         <div class="card-body model-1">
                                             <div class="floating-left">
-                                                <h6 class="autor"><!-- Camila Bonatti --></h6>
+                                                <h6 class="autor">
+                                                    <!-- Camila Bonatti -->
+                                                </h6>
                                                 <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                             </div>
 
@@ -277,7 +279,9 @@
                                             <img src="" alt="" class="img-fluid rounded img_Control controle-imagem" />
 
                                             <div class="floating-left">
-                                                <h6 class="autor"><!-- Camila Bonatti --></h6>
+                                                <h6 class="autor">
+                                                    <!-- Camila Bonatti -->
+                                                </h6>
                                                 <p><small class="text-muted dataFabricacao">27/01/2022 às 7:55</small></p>
                                                 <div>
                                                     <div class="rating">
