--- a/modulo_frontend/Pages/Profissionais/Profissionais.html
+++ b/modulo_frontend/Pages/Profissionais/Profissionais.html
@@ -223,7 +223,7 @@
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser3" style="z-index: 999;">
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Perfil</a></li>
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Personalização</a></li>
-                                <li><a class="dropdown-item" href="../index.html" onclick="logout()">Sair</a></li>
+                                <li><a class="dropdown-item" href="../../index.html" onclick="logout()">Sair</a></li>
                             </ul>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                                 </div>
                                 <div class="container-fluid article-size">
                                     <div class="row g-0 cards-box">
-                                        <!-- code injected by js -->                                        
+                                        <!-- code injected by js -->
                                     </div>
                                 </div>
                             </div>
