--- a/modulo_frontend/Pages/Artigos/Artigos.html
+++ b/modulo_frontend/Pages/Artigos/Artigos.html
@@ -227,7 +227,7 @@
                             <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser3" style="z-index: 999;">
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Perfil</a></li>
                                 <li><a class="dropdown-item" href="../Configuracoes/index.html">Personalização</a></li>
-                                <li><a class="dropdown-item" href="../index.html" onclick="logout()">Sair</a></li>
+                                <li><a class="dropdown-item" href="../../index.html" onclick="logout()">Sair</a></li>
                             </ul>
                         </div>
                     </div>
