--- a/modulo_frontend/Pages/Login/register.html
+++ b/modulo_frontend/Pages/Login/register.html
@@ -49,11 +49,11 @@
                                     <input type="date" id="birthDate" class="form-control" name="birthDate" title="Ex.: 21/02/2001" placeholder="data de nascimento" autocomplete="off" required>
                                 </div>
                                 <div class="input-box passwd-box">
-                                    <input type="password" id="passwd" class="form-control" name="passwd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
+                                    <input type="password" id="passwd" class="form-control" name="passwd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
                                         placeholder="Senha" required>
                                 </div>
                                 <div class="input-box confirmpasswd-box">
-                                    <input type="password" id="confirmpasswd" class="form-control" name="confirmpasswd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
+                                    <input type="password" id="confirmpasswd" class="form-control" name="confirmpasswd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*)(?=.*).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
                                         placeholder="Confirme sua senha" required>
                                     <div class="eye-icon">
                                         <button class="fa-solid fa-eye" id="show-passwd"></button>
