--- a/modulo_frontend/index.html
+++ b/modulo_frontend/index.html
@@ -63,7 +63,7 @@
                     <div class="below-login">
                         <div class="btn-box create-account">
                             <h4>Não possui cadastro?</h4>
-                            <button class="btn btn-success btn-register" type="button">Criar conta</button>
+                            <a href="/Pages/Login/register.html"><button class="btn btn-success btn-register" type="button">Criar conta</button></a>
                         </div>
                         <div class="forgot-passwd-below-box">
                             <a href="/Pages/Login/passwd-recovery.html">Esqueceu sua senha?</a>
