melhorias design e fundo

--- a/modulo_frontend/Pages/Profissionais/Profissionais.html
+++ b/modulo_frontend/Pages/Profissionais/Profissionais.html
@@ -231,7 +231,7 @@
                 <div class="col scrollbar scrollbar-near-moon bordered-near-moon thin" style="overflow: auto; height: calc(100vh - 64px); width: calc(100vw - 64px); margin: 64px 0px 0px 64px;">
                     <div class="row gy-3 inner_content">
                         <div class="container-fluid">
-                            <div class="card">
+                            <div class="card fundoTransparente">
                                 <div class="card-header-pills" style="margin: 20px 0px;">
                                     <h1>Porque não uma ajuda profissional e personalizada?</h1>
                                     <p style="text-align: center;">Segue abaixo uma lista de profissionais que escolhemos especialmente para você!</p>
