--- a/modulo_frontend/index.html
+++ b/modulo_frontend/index.html
@@ -39,10 +39,10 @@
                     </div>
                     <form action="" class="form-login" id="login" method="post">
                         <div class="email-box">
-                            <input type="email" id="email" class="form-control" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Ex.: john@planejy.com" placeholder="Email" required>
+                            <input type="email" id="email" class="form-control" name="email" title="Ex.: john@planejy.com" placeholder="Email" required>
                         </div>
                         <div class="passwd-box">
-                            <input type="password" id="passwd" class="form-control" name="passwd" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
+                            <input type="password" id="passwd" class="form-control" name="passwd" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
                                 placeholder="Senha" required>
                             <div class="eye-icon">
                                 <button class="fa-solid fa-eye" id="show-passwd"></button>
