--- a/modulo_frontend/Pages/Calendario/Calendario.html
+++ b/modulo_frontend/Pages/Calendario/Calendario.html
@@ -237,19 +237,19 @@
                         <label for="inputCategoria">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria" class="form-control">
                             <option value="">Selecione a Categoria</option>
-                            <option value="#e85a6a">Trabalho</option>
-                            <option value="#79b57f">Estudo</option>
-                            <option value="#a89e43">Faculdade</option>
-                            <option value="#a33eb5">Curso</option>
-                            <option value="#3d303d">Vida Noturna</option>
-                            <option value="#6f869e">Descanso</option>
-                            <option value="#2eadc7">Dia-a-dia</option>
-                            <option value="#a876a2">Social</option>
-                            <option value="#d66a22">Social-Profissional</option>
-                            <option value="#4b88e3">Saude</option>
-                            <option value="#d62222">Importante!</option>
-                            <option value="#d9d911">Cuidado!</option>
-                            <option value="#e33b84">Outros</option>
+                            <option value="#d98b8b">Trabalho</option>
+                            <option value="#8ebd92">Estudo</option>
+                            <option value="#c9c17f">Faculdade</option>
+                            <option value="#ca88d1">Curso</option>
+                            <option value="#6e5185">Vida Noturna</option>
+                            <option value="#80bfa8">Descanso</option>
+                            <option value="#85bbc9">Dia-a-dia</option>
+                            <option value="#d694a8">Social</option>
+                            <option value="#c99a79">Social-Profissional</option>
+                            <option value="#6ba4cf">Saude</option>
+                            <option value="#d46868">Importante!</option>
+                            <option value="#c9d14f">Cuidado!</option>
+                            <option value="#c46ca4">Outros</option>
                         </select>
                     </div>
                 </div>
@@ -302,19 +302,19 @@
                         <label for="inputCategoria2">Categoria (*)</label>
                         <select name="selectCategoria" id="inputCategoria2" class="form-control">
                             <option value="">Selecione a Categoria</option>
-                            <option value="#e85a6a">Trabalho</option>
-                            <option value="#79b57f">Estudo</option>
-                            <option value="#a89e43">Faculdade</option>
-                            <option value="#a33eb5">Curso</option>
-                            <option value="#3d303d">Vida Noturna</option>
-                            <option value="#6f869e">Descanso</option>
-                            <option value="#2eadc7">Dia-a-dia</option>
-                            <option value="#a876a2">Social</option>
-                            <option value="#d66a22">Social-Profissional</option>
-                            <option value="#4b88e3">Saude</option>
-                            <option value="#d62222">Importante!</option>
-                            <option value="#d9d911">Cuidado!</option>
-                            <option value="#e33b84">Outros</option>
+                            <option value="#d98b8b">Trabalho</option>
+                            <option value="#8ebd92">Estudo</option>
+                            <option value="#c9c17f">Faculdade</option>
+                            <option value="#ca88d1">Curso</option>
+                            <option value="#6e5185">Vida Noturna</option>
+                            <option value="#80bfa8">Descanso</option>
+                            <option value="#85bbc9">Dia-a-dia</option>
+                            <option value="#d694a8">Social</option>
+                            <option value="#c99a79">Social-Profissional</option>
+                            <option value="#6ba4cf">Saude</option>
+                            <option value="#d46868">Importante!</option>
+                            <option value="#c9d14f">Cuidado!</option>
+                            <option value="#c46ca4">Outros</option>
                         </select>
                     </div>
                 </div>
