--- a/modulo_frontend/index.html
+++ b/modulo_frontend/index.html
@@ -42,8 +42,7 @@
                             <input type="email" id="email" class="form-control" name="email" title="Ex.: john@planejy.com" placeholder="Email" required>
                         </div>
                         <div class="passwd-box">
-                            <input type="password" id="passwd" class="form-control" name="passwd" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais."
-                                placeholder="Senha" required>
+                            <input type="password" id="passwd" class="form-control" name="passwd" title="Sua senha deve conter pelo menos 8 caracteres, tendo pelo menos um número, letras maiúsculas e minúsculas e caracteres especiais." placeholder="Senha" required>
                             <div class="eye-icon">
                                 <button class="fa-solid fa-eye" id="show-passwd"></button>
                                 <button class="fa-solid fa-eye-slash" id="hide-passwd"></button>
@@ -78,6 +77,8 @@
             <span>&copy; Copyright 2022 - Planejy</span>
         </div>
     </footer>
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
