user update updated

--- a/modulo_frontend/Pages/Configuracoes/index.html
+++ b/modulo_frontend/Pages/Configuracoes/index.html
@@ -297,7 +297,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-6 config-box">
-                                                <button type="submit" class="btn btn-success fullsizebtn float-config-salvar" id="btnSave">Salvar</button>
+                                                <button type="button" class="btn btn-success fullsizebtn float-config-salvar" id="btnSave">Salvar</button>
                                             </div>
                                         </div>
                                     </form>
