botao excluir configuracoes

--- a/modulo_frontend/Pages/Configuracoes/index.html
+++ b/modulo_frontend/Pages/Configuracoes/index.html
@@ -298,6 +298,7 @@
                                             </div>
                                             <div class="col-sm-6 config-box">
                                                 <button type="button" class="btn btn-success fullsizebtn float-config-salvar" id="btnSave">Salvar</button>
+                                                <button type="button" class="btn btn-dark fullsizebtn float-config-excluir" id="btnExcluir">excluir</button>
                                             </div>
                                         </div>
                                     </form>
